                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.4
  *) [TS-1226] Make header_filter support e.g. '=' characters in header
   values.

  *) [TS-1150] Some performance improvements around the heap guard.

  *) [TS-1216] Remove the initializer for some gcc`s limits.

  *) [TS-1205] double free when RecDataSet in cluster mode

  *) [TS-1220] stats: cleanup and fix the wrong values.

  *) [TS-1212] can not limit ram cache, also fix the stats.

  *) [TS-1214] another race condition in cache init.

  *) [TS-1130] Wrong CAS operation on ink_time_t on 64 bit system.

  *) [TS-1127] Wrong returned value of incoming port address. This
   API is deprecated, so I also fixed the regression tests accordingly.
   Authors: Yakov Kopel and Leif.

  *) [TS-1211] Read backlog config value to set the listen backlog.

  *) [TS-1202] Install traffic_shell man/doc pages in a more appropriate
   location. Author: Igor Brezac.

  *) [TS-1198] ssl crash when certificates are missing.

  *) [TS-1164] a race condition in cache init.

  *) [TS-1079] Add an API function to turn debugging on for specific
   transactions/sessions. This also adds a new Debug() functionality in
   both core and APIs. Author: Uri Shachar.

  *) [TS-1194 Change conversions to build with gcc-4.6 on OmniOS/Solaris.
   Also cleanup a couple of plugins to use our "core" build environment.

  *) [TS-1192] Remove gethostbyname usage in test code

  *) [TS-1147] deprecate records.config SSL configuration

  *) [TS-1121] Make --disable-diags at least disable Debug etc.

  *) [TS-1191] Change defaults for proxy.config.dns.search_default_domains to
   not use the search domains in resolv.conf.

  *) [TS-1190] Change defaults for proxy.config.http.share_server_sessions to
   have a session pool per net-thread. This is best performance for most
   common use cases.

  *) [TS-1189] Build problem with older versions of OpenSSL.
