@@ -189,9 +189,6 @@ my %TWO_2_THREE = (
   "TSVConnAbort" => [$W_VOID_RETURN],
   "TSVConnShutdown" => [$W_VOID_RETURN],
   "TSVConnCacheObjectSizeGet" => [$W_RETURN_DIRECT],
-  "TSNetVConnRemoteIPGet" => [$W_RETURN_DIRECT], # TODO: Change to struct addrinfo??
-  "TSNetVConnRemotePortGet" => [$W_RETURN_DIRECT], # TODO: Change to struct addrinfo??
-  "TSHostLookupResultIPGet" => [$W_RETURN_DIRECT], # TODO: Change to struct addrinfo??
   "TSVIOReenable" => [$W_VOID_RETURN],
   "TSVIONBytesSet" => [$W_VOID_RETURN],
   "TSVIONDoneSet" => [$W_VOID_RETURN],
@@ -212,7 +209,6 @@ my %TWO_2_THREE = (
   "TSTextLogObjectRollingIntervalSecSet" => [$W_VOID_RETURN],
   "TSTextLogObjectRollingOffsetHrSet" => [$W_VOID_RETURN],
   "TSHttpTxnAborted" => [$W_TSRETURNCODE],
-  "TSIOBufferAppend" => [$W_VOID_RETURN],
   "TSHttpTxnClientReqHdrBytesGet" => [$W_RETURN_DIRECT],
   "TSHttpTxnClientReqBodyBytesGet" => [$W_RETURN_DIRECT],
   "TSHttpTxnServerReqHdrBytesGet" => [$W_RETURN_DIRECT],
