@@ -1,5 +1,7 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.1.4
+  *) [TS-1210] remove 3.0.x deprecated APIs
+
   *) [TS-1226] Make header_filter support e.g. '=' characters in header
    values.
 
